@@ -5,7 +5,7 @@ import com.laiyefei.project.infrastructure.original.soil.standard.foundation.poj
 import com.laiyefei.project.infrastructure.original.soil.standard.foundation.prepper.IPrepper;
 import com.laiyefei.project.original.soil.equip.swagger.SwaggerInstall;
 import com.laiyefei.project.original.soil.equip.swagger.co.SwaggerModuleInfo;
-import com.laiyefei.project.original.soil.standard.spread.foundation.performer.TokenConfigComp;
+import com.laiyefei.project.original.soil.standard.spread.foundation.performer.TokenConfiger;
 import com.laiyefei.project.original.soil.standard.spread.foundation.pojo.co.LicenseType;
 import com.laiyefei.project.original.soil.standard.spread.foundation.tools.util.ClassUtil;
 import io.swagger.annotations.Api;
@@ -45,26 +45,27 @@ import java.util.stream.Collectors;
 @Configuration
 @ConditionalOnBean({
         SwaggerModuleInfo.class,
-        TokenConfigComp.class
+        TokenConfiger.class
 })
 @EnableSwagger2
 public class SwaggerPrepper implements IPrepper, WebMvcConfigurer, ApplicationContextAware {
 
     private final SwaggerModuleInfo swaggerModuleInfo;
-    private final TokenConfigComp tokenConfigComp;
+    private final TokenConfiger tokenConfiger;
     private ApplicationContext context;
     private SwaggerInstall swaggerInstall;
 
+    @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
     @Autowired
     public SwaggerPrepper(SwaggerModuleInfo swaggerModuleInfo,
-                          TokenConfigComp tokenConfigComp) {
+                          TokenConfiger tokenConfiger) {
         this.swaggerModuleInfo = swaggerModuleInfo;
-        this.tokenConfigComp = tokenConfigComp;
+        this.tokenConfiger = tokenConfiger;
     }
 
     @PostConstruct
     public void afterCheck() {
-        Assert.notNull(this.tokenConfigComp, "error: sorry, the tokenComps is null.");
+        Assert.notNull(this.tokenConfiger, "error: sorry, the tokenComps is null.");
         Assert.notNull(this.context, "error: sorry, the context is null.");
         Map<String, Object> installs = this.context.getBeansWithAnnotation(SwaggerInstall.class);
         Assert.notNull(installs, "error: sorry, no register swagger event.");
@@ -78,7 +79,7 @@ public class SwaggerPrepper implements IPrepper, WebMvcConfigurer, ApplicationCo
     @Bean
     public Docket create() {
         //get annotation
-        final String title = Optional.ofNullable(this.tokenConfigComp.gainProperty("spring.application.name")).orElseGet(() -> "项目名丢失");
+        final String title = Optional.ofNullable(this.tokenConfiger.gainProperty("spring.application.name")).orElseGet(() -> "项目名丢失");
         ApiSelectorBuilder selectorBuilder = new Docket(DocumentationType.SWAGGER_2)
                 .apiInfo(new ApiInfoBuilder().title("项目【".concat(title).concat("】接口文档"))
                         .description("项目【".concat(title).concat("】接口文档"))
@@ -99,15 +100,15 @@ public class SwaggerPrepper implements IPrepper, WebMvcConfigurer, ApplicationCo
                 .paths(Predicates.not(PathSelectors.regex("/error.*")))
                 .paths(PathSelectors.any())
                 .build();
-        if (this.tokenConfigComp.containsProperty(TokenConfigComp.TOKEN_HEADER_CONFIG_KEY)) {
-            final String tokenHeader = this.tokenConfigComp.gainTokenHeader();
-            docket.securityContexts(List.of(SecurityContext.builder()
+        if (this.tokenConfiger.containsProperty(TokenConfiger.TOKEN_HEADER_CONFIG_KEY)) {
+            final String tokenHeader = this.tokenConfiger.gainTokenHeader();
+            docket.securityContexts(Arrays.asList(SecurityContext.builder()
                     .securityReferences(Arrays.asList(
                             new SecurityReference(tokenHeader,
                                     new AuthorizationScope[]{new AuthorizationScope(tokenHeader, tokenHeader.concat("描述信息"))})))
                     .forPaths(PathSelectors.any())
                     .build()));
-            docket.securitySchemes(List.of(new ApiKey(tokenHeader, tokenHeader, "header")));
+            docket.securitySchemes(Arrays.asList(new ApiKey(tokenHeader, tokenHeader, "header")));
         }
         return docket;
     }
